@@ -192,7 +192,7 @@ JAVA_TEST_OPTIONS := $(JAVA_OPTIONS) -Xfuture -Xbatch -Xms256M -Xmx1024M
 
 TEST_EXAMPLES_DIR = $(TEST_DIR)/examples
 TEST_OUTPUT_DIR = $(TEST_DIR)/output
-TEST_LOGIC_DIRS = "bool Int ALCO S4 ALBOid LTL LTLC lists KE3 fotheory IEL"
+TEST_LOGIC_DIRS = "bool Km Int ALCO S4 ALBOid LTL LTLC lists KE3 fotheory IEL"
 TEST_LOGIC_PARSERS = $(shell find $(TEST_OUTPUT_DIR) -name '*.g')
 TEST_LOGIC_SOURCES = $(shell find $(TEST_OUTPUT_DIR) -name '*.java')
 
