@@ -1,0 +1,17 @@
+#antlr.k = 1
+#antlr.superClass=mettel.core.language.MettelAbstractLogicParser
+#antlr.backtrack=false
+#antlr.memoize=false
+
+#branch.bound=
+
+equality.keywords={equality, equivalence}
+#expression.left.delimiter=(
+#expression.right.delimiter=)
+
+#list.left.delimiter=
+#list.right.delimiter=
+
+tableau.rule.delimiter=;
+tableau.rule.branch.delimiter=||
+#tableau.rule.premise.delimiter=/
