@@ -1,0 +1,2 @@
+//Unsatisfiable
+@l ~(<R>(~(~P | Q)) | (<R>(~P)) | (~(<R>(~Q))))
