@@ -1,3 +1,5 @@
+24/02/2013 Km logic case study
+
 04/02/2013 Intuitionistic logic case study
 
 28/01/2013 Random expression generator with depth restrictions, variable names, and frequencies of connectives
